[feat]keyFeature,company:/fixed horizontally alignment

--- a/src/pages/Home/Company/company.module.css
+++ b/src/pages/Home/Company/company.module.css
@@ -1,6 +1,6 @@
 .gridLayout{
       display: grid !important;
       gap: 20px;
-      justify-content: center;
+      justify-content: space-between;
       grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
 }
